# FluidPrjct

./: CMakeLists.txt  main.cpp
InputData/: ball.sdf  config.json  labels_3d_sphere.txt  labels_bathymetry.txt  labels_colimn.txt  labels_simple.txt  labels_simple3d.txt  particles_-1.ply
src/FluidSim/: FluidSolver2D.cu  FluidSolver2D.cuh  FluidSolver3D.cu  FluidSolver3D.cuh  test.cu  test.cuh  utility.cu  utility.cuh
